--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run build:live",
+    "build": "tsc -p .",
+    "build:live": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -24,6 +26,8 @@
     "eslint": "^8.20.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-react": "^7.30.1",
-    "prettier": "2.7.1"
+    "nodemon": "^2.0.19",
+    "prettier": "2.7.1",
+    "ts-node": "^10.9.1"
   }
 }
